# AI-Driven-Stock-Market-Prediction

./: .env.example  .gitignore  README.md  build_log.txt  docker-compose.yml  download_report.csv  implementation_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ai_engine/: __init__.py
ai_engine/data/: __init__.py  cleaner.py  data_loader.py  dataset.py  exceptions.py  storage.py  tickers.py
ai_engine/evaluation/: __init__.py  metrics.py
ai_engine/features/: __init__.py  engine.py  indicators.py  pipeline.py
ai_engine/hpc/: __init__.py
ai_engine/models/: __init__.py  base.py  lstm_model.py  transformer_model.py  xgboost_model.py
ai_engine/portfolio/: __init__.py  monte_carlo.py
backend/: Dockerfile  README.md  __init__.py  main.py
benchmarks/: __init__.py  run_benchmarks.py
data/: benchmark_results.json
data/raw/: .gitkeep  (+102 more)
docs/: DATA_AUDIT.md  FINAL_AUDIT.md  README.md  all_cached_pipeline_report.txt  final_model_evaluation_report.txt  hpc_walkthrough.md  ingestion_report.txt  openmp_benchmark_report.txt  openmp_hpc_benchmark_report.txt
frontend/: Dockerfile  README.md  index.html
notebooks/: README.md
saved_models/: hpc_RELIANCE_xgboost.model  hpc_RELIANCE_xgboost.model.metadata.json
scripts/: README.md  audit_and_cleanup.py  check_hpc_environment.py  download_data.py  fetch_models.py  remove_ns_duplicates.py  retrain_xgboost.py  run_all_cached_pipeline.py  run_hpc_pipeline.py  submit_job.sh.template
tests/: test_parallel_loader.py  verify_backend.py  verify_features.py  verify_models_local.py  verify_portfolio.py
(+120 files in other folders)
