[build-system]
requires = ["setuptools>=61.0.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_engine"
version = "0.1.0"
description = "Core AI-driven Stock Prediction and Portfolio Optimization engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_engine*"]
